add all user api routes
